修改demo演示，添加动态添加和移除条目;

--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BottomBarLayout</string>
+    <string name="tab_home">首页</string>
+    <string name="tab_video">视频</string>
+    <string name="tab_micro">微头条</string>
+    <string name="tab_me">我的</string>
 </resources>
