迁移到androidX;支持设置lottie

--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="tab_video">视频</string>
     <string name="tab_micro">微头条</string>
     <string name="tab_me">我的</string>
+    <string name="tab_category">分类</string>
+    <string name="tab_cart">购物车</string>
 </resources>
